--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="fortmatic-site-verification" content="VX2sV8B5roETAbdU" />
-  
-    <link rel="icon" type="image/png" sizes="192x192"  href="/opes-logo-big.png">
-    <link rel="icon" type="image/png" sizes="32x32"  href="/opes-logo.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/opes-logo.png">
-    <meta name="theme-color" content="#ffffff">
+
+    <link rel="icon" type="image/png" sizes="192x192" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/logo.png" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="theme-color" content="#000000" />
-    <meta  name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width, shrink-to-fit=yes">
+    <meta
+      name="viewport"
+      content="initial-scale=1, minimum-scale=1, width=device-width, shrink-to-fit=yes"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>OPES.Finance - SEEDZ</title>
+    <title>Bees Social</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-181881537"></script>
     <script>
