--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="fortmatic-site-verification" content="VX2sV8B5roETAbdU" />
 
-    <link rel="icon" type="image/png" sizes="192x192" href="/logo.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/logo.png" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="viewport"
-      content="initial-scale=1, minimum-scale=1, width=device-width, shrink-to-fit=yes"
-    />
+  <head>
+    <base href="/">
+
+    <meta charset="utf-8" />
+    <meta name="fortmatic-site-verification"
+          content="VX2sV8B5roETAbdU" />
+
+    <link rel="icon"
+          type="image/png"
+          sizes="192x192"
+          href="/logo.png" />
+    <link rel="icon"
+          type="image/png"
+          sizes="32x32"
+          href="/logo.png" />
+    <link rel="manifest"
+          href="/manifest.json" />
+    <meta name="msapplication-TileColor"
+          content="#ffffff" />
+    <meta name="msapplication-TileImage"
+          content="/logo.png" />
+    <meta name="theme-color"
+          content="#ffffff" />
+    <meta name="theme-color"
+          content="#000000" />
+    <meta name="viewport"
+          content="initial-scale=1, minimum-scale=1, width=device-width, shrink-to-fit=yes" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest"
+          href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -40,6 +54,7 @@
       gtag('config', 'UA-181881537');
     </script> -->
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -54,4 +69,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
 </html>
