dummy script exchange

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
 
       gtag('config', 'UA-181881537');
     </script> -->
+    <script type="text/javascript"
+            src="https://s3.tradingview.com/tv.js"></script>
   </head>
 
   <body>
