--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,13 @@
           content="#000000" />
     <meta name="viewport"
           content="initial-scale=1, minimum-scale=1, width=device-width, shrink-to-fit=yes" />
+    <!-- <meta http-equiv="Content-Security-Policy"
+          content="script-src *"> -->
+    <!-- <meta http-equiv="Content-Security-Policy"
+          content="default-src * 'self' data: 'unsafe-inline' 'unsafe-hashes' 'unsafe-eval'; script-src * 'self' data: 'unsafe-inline' 'unsafe-hashes' 'unsafe-eval' telemetry.tradingview.com s3.tradingview.com; script-src-elem * 'self' data: 'unsafe-inline' 'unsafe-hashes' 'unsafe-eval' telemetry.tradingview.com s3.tradingview.com; script-src-attr * 'self' data: 'unsafe-inline' 'unsafe-hashes' 'unsafe-eval' telemetry.tradingview.com s3.tradingview.com" /> -->
+    <!-- content="script-src * 'self' data: 'unsafe-inline' 'unsafe-hashes' 'unsafe-eval'" -->
+
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -53,8 +60,7 @@
 
       gtag('config', 'UA-181881537');
     </script> -->
-    <script type="text/javascript"
-            src="https://s3.tradingview.com/tv.js"></script>
+
   </head>
 
   <body>
