--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,20 @@
       gtag('config', 'UA-181881537');
     </script> -->
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async
+            src="https://www.googletagmanager.com/gtag/js?id=G-PVHTZPDTN7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-PVHTZPDTN7');
+    </script>
+
   </head>
 
   <body>
